<?xml version="1.0" encoding="utf-8"?>
<!-- 
	/*
	* XYZPIM, A pim on Android Platform
	*
	* Copyright (c) 2008, xyz team or third-party contributors as
	* indicated by the @author tags or express copyright attribution
	* statements applied by the authors.  All third-party contributions are
	* distributed under license by xyz team.
	*
	* This copyrighted material is made available to anyone wishing to use, modify,
	* copy, or redistribute it subject to the terms and conditions of the GNU
	* Lesser General Public License, as published by the Free Software Foundation.
	*
	* This program is distributed in the hope that it will be useful,
	* but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
	* or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License
	* for more details.
	*
	* You should have received a copy of the GNU Lesser General Public License
	* along with this distribution; if not, write to:
	* Free Software Foundation, Inc.
	* 51 Franklin Street, Fifth Floor
	* Boston, MA  02110-1301  USA
	*/
-->
<resources>
	<string name="app_name">XYZPIM</string>
	<string name="app_welcome">By Team XYZ</string>
	
	<string name="ok">OK</string>
	<string name="add">Add</string>
	<string name="create">New</string>
	<string name="del">Delete</string>
	<string name="edit">Edit</string>
	<string name="back">Back</string>
	<string name="rename">Rename</string>
	<string name="open">Open</string>
	<string name="refresh">Refresh</string>
	<string name="finish">Finish</string>
	
	<string name="cancel">Cancel</string>
	<string name="contacts">Contacts</string>
	<string name="organizer">Organizer</string>
	<string name="email">Email</string>
	<string name="finance">Finance</string>
	<string name="news">Rss News</string>
	<string name="memorandum">Memorandum</string>
	<string name="schedule">Schedule</string>
	<string name="meeting">Meeting</string>
	<string name="note">Note</string>
	<string name="newtask">NewTask</string>
	<string name="title">Title</string>
	<string name="time">Time</string>
	<string name="houseloancal">House Loan Calculate</string>
	<string name="house_loan">House Loan</string>
	<string name="loan_type">Loan Type</string>
	<string name="loan_amount">Loan Amount</string>
	<string name="repay_amount">Repay Amount</string>
	<string name="interest_amount">Interest Amount</string>
	<string name="loan_month">Loan Month</string>
	<string name="repay_per_month">Repay Per-month</string>
	<string name="loan_rate">Loan Rate</string>
	<string name="calculate">Calculate</string>
	<string name="recalculate">Recalculate</string>
	<string name="exchageratecal">Exchange-rate Calculate</string>
	<string name="colon">：</string>
	<string name="equal">＝</string>
	<string name="moreinfo">More information</string>
	<string name="starttime">Start Time</string>
	<string name="endtime">End Time</string>
	<string name="notify">Notify</string>
	<string name="place">Place</string>
	<string name="important">Important</string>
	<string name="subject">Subject</string>
	<string name="from">From</string>
	<string name="to">To</string>
	<string name="date_time">Date Time</string>
	<string name="send">Send</string>
	
	<string name="email_account_list">Email Account List</string>
	<string name="email_account_setting">Email Account Setting</string>
	<string name="email_folders">Email Folders</string>
	<string name="email_message_list">Email Message List</string>
	<string name="account_name">Account Name</string>
	<string name="email_addr">Email Address</string>
	<string name="ssl">SSL</string>
	<string name="smtp_host">SMTP Host</string>
	<string name="smtp_port">SMTP Port</string>
	<string name="pop3_host">POP3 Host</string>
	<string name="pop3_port">POP3 Port</string>
	<string name="username">User Name</string>
	<string name="password">Password</string>
	<string name="inbox">InBox</string>
	<string name="outbox">OutBox</string>
	<string name="compose">Compose</string>
	<string name="read">Read</string>
	<string name="content">Content</string>
	<string name="add_contact">Add Contact</string>
	<string name="add_group">Add Group</string>
	
	
	<string name="update_rate">Update Rate</string>
	
	<string name="group_list">Group List</string>
	<string name="group_member_list">Group Member List</string>
	<string name="group">Group</string>
	
	<string name="feed_url">Feed URL</string>
	<string name="rss_feeds">RSS Feeds</string>
	<string name="rss_articles">RSS Articles</string>
	<string name="rss_read_article">Read Article</string>
    
    <string name="test">Test</string>
</resources>
