<?xml version="1.0" encoding="utf-8"?>
<!-- 
	/*
	* XYZPIM, A pim on Android Platform
	*
	* Copyright (c) 2008, xyz team or third-party contributors as
	* indicated by the @author tags or express copyright attribution
	* statements applied by the authors.  All third-party contributions are
	* distributed under license by xyz team.
	*
	* This copyrighted material is made available to anyone wishing to use, modify,
	* copy, or redistribute it subject to the terms and conditions of the GNU
	* Lesser General Public License, as published by the Free Software Foundation.
	*
	* This program is distributed in the hope that it will be useful,
	* but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
	* or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License
	* for more details.
	*
	* You should have received a copy of the GNU Lesser General Public License
	* along with this distribution; if not, write to:
	* Free Software Foundation, Inc.
	* 51 Franklin Street, Fifth Floor
	* Boston, MA  02110-1301  USA
	*/
-->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:animationCache="false" android:clipToPadding="false"
	android:padding="12dip" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:stretchColumns="1"
	android:shrinkColumns="1">
	<TableRow>
		<TextView android:text="@string/subject" android:textColor="#ffff00"/>
		<TextView android:id="@+id/mail_subject" />
	</TableRow>
	<TableRow>
		<TextView android:text="@string/to" android:textColor="#ffff00"/>
		<TextView android:id="@+id/mail_reciver"
			android:layout_width="fill_parent" />
	</TableRow>
	<TableRow>
		<TextView android:text="@string/from" android:textColor="#ffff00"/>
		<TextView android:id="@+id/mail_sender"
			android:layout_width="fill_parent" />
	</TableRow>
	<TableRow>
		<TextView android:text="@string/date_time" android:textColor="#ffff00"/>
		<TextView android:id="@+id/mail_date" />
	</TableRow>

	<TextView android:text="正文" android:textColor="#ffff00"
		android:layout_height="wrap_content"/>
	<WebView android:layout_height="fill_parent"
		android:id="@+id/mail_content" />
</TableLayout>
