<?xml version="1.0" encoding="utf-8"?>
<!-- 
	/*
	* XYZPIM, A pim on Android Platform
	*
	* Copyright (c) 2008, xyz team or third-party contributors as
	* indicated by the @author tags or express copyright attribution
	* statements applied by the authors.  All third-party contributions are
	* distributed under license by xyz team.
	*
	* This copyrighted material is made available to anyone wishing to use, modify,
	* copy, or redistribute it subject to the terms and conditions of the GNU
	* Lesser General Public License, as published by the Free Software Foundation.
	*
	* This program is distributed in the hope that it will be useful,
	* but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
	* or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License
	* for more details.
	*
	* You should have received a copy of the GNU Lesser General Public License
	* along with this distribution; if not, write to:
	* Free Software Foundation, Inc.
	* 51 Franklin Street, Fifth Floor
	* Boston, MA  02110-1301  USA
	*/
-->
<!-- 汇率计算器的界面-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:gravity="center_vertical">
	<TableLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:stretchColumns="2">
		<TableRow>
			<Spinner android:id="@+id/money1type"
				android:drawSelectorOnTop="true" />
			<TextView android:text="@string/colon" />
			<EditText android:id="@+id/money1amount" />
		</TableRow>
		<TableRow>
			<TextView />
			<TextView android:text="@string/equal" />
			<TextView />
		</TableRow>
		<TableRow>
			<Spinner android:id="@+id/money2type"
				android:drawSelectorOnTop="true" />
			<TextView android:text="@string/colon" />
			<EditText android:id="@+id/money2amount" />
		</TableRow>
	</TableLayout>
	<TableLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TableRow android:gravity="right">
			<Button android:id="@+id/exchange_rate_calculate"
				android:text="@string/calculate" />
			<Button android:id="@+id/exchage_rate_more_info"
				android:text="@string/moreinfo" />
		</TableRow>
	</TableLayout>
</LinearLayout>