<?xml version="1.0" encoding="utf-8"?>
<!-- 
	/*
	* XYZPIM, A pim on Android Platform
	*
	* Copyright (c) 2008, xyz team or third-party contributors as
	* indicated by the @author tags or express copyright attribution
	* statements applied by the authors.  All third-party contributions are
	* distributed under license by xyz team.
	*
	* This copyrighted material is made available to anyone wishing to use, modify,
	* copy, or redistribute it subject to the terms and conditions of the GNU
	* Lesser General Public License, as published by the Free Software Foundation.
	*
	* This program is distributed in the hope that it will be useful,
	* but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
	* or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License
	* for more details.
	*
	* You should have received a copy of the GNU Lesser General Public License
	* along with this distribution; if not, write to:
	* Free Software Foundation, Inc.
	* 51 Franklin Street, Fifth Floor
	* Boston, MA  02110-1301  USA
	*/
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:gravity="center_vertical">
	<TableLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:stretchColumns="1">
		<TableRow>
			<TextView android:text="@string/loan_amount" />
			<TextView android:id="@+id/loan_amount_text"
				android:layout_width="fill_parent"
				android:layout_height="?android:attr/listPreferredItemHeight"
				android:textAppearance="?android:attr/textAppearanceLargeInverse"
				android:textColor="?android:attr/textColorDim" />
		</TableRow>
		<TableRow>
			<TextView android:text="@string/repay_amount" />
			<TextView android:id="@+id/repay_amount_text"
				android:layout_width="fill_parent"
				android:layout_height="?android:attr/listPreferredItemHeight"
				android:textAppearance="?android:attr/textAppearanceLargeInverse"
				android:textColor="?android:attr/textColorDim" />
		</TableRow>
		<TableRow>
			<TextView android:text="@string/interest_amount" />
			<TextView android:id="@+id/interest_amount_text"
				android:layout_width="fill_parent"
				android:layout_height="?android:attr/listPreferredItemHeight"
				android:textAppearance="?android:attr/textAppearanceLargeInverse"
				android:textColor="?android:attr/textColorDim" />
		</TableRow>
		<TableRow>
			<TextView android:text="@string/loan_month" />
			<TextView android:id="@+id/loan_month_text"
				android:layout_width="fill_parent"
				android:layout_height="?android:attr/listPreferredItemHeight"
				android:textAppearance="?android:attr/textAppearanceLargeInverse"
				android:textColor="?android:attr/textColorDim" />
		</TableRow>
		<TableRow>
			<TextView android:text="@string/repay_per_month" />
			<TextView android:id="@+id/repay_per_month_text"
				android:layout_width="fill_parent"
				android:layout_height="?android:attr/listPreferredItemHeight"
				android:textAppearance="?android:attr/textAppearanceLargeInverse"
				android:textColor="?android:attr/textColorDim" />
		</TableRow>
	</TableLayout>
</LinearLayout>
